tests/tooling/fixtures/native/recovery/negative/negative_extern_pure_missing_fn_keyword.objc3
// Negative fixture: extern/pure qualifier chains require the `fn` keyword.
// Expected diagnostic code(s): O3P100.
module NegativeExternPureMissingFnKeyword;

extern pure let value = 1;

fn main() -> i32 {
  return value;
}
